--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Appointment/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Appointment/All.cshtml
@@ -7,6 +7,7 @@
 <h2>@ViewData["Title"]</h2>
 <br>
 <h2>New Appointments</h2>
+<div class="container-fluid col-md-6">
 <table class="table white">
     <thead>
         <tr>
@@ -51,50 +52,53 @@
     }
     </tbody>
 </table>
+    </div>
 <br>
 <h2>Archive</h2>
-<table class="table white">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PatientName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateTime)
-            </th>
-            @if (this.User.IsInRole("Administrator"))
-            {
+<div class="container-fluid col-md-6">
+    <table class="table white">
+        <thead>
+            <tr>
                 <th>
-                    Doctor
+                    @Html.DisplayNameFor(model => model.PatientName)
                 </th>
-            }
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            @if (item.DateTime < DateTime.UtcNow)
+                <th>
+                    @Html.DisplayNameFor(model => model.DateTime)
+                </th>
+                @if (this.User.IsInRole("Administrator"))
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PatientName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DateTime)
-                    </td>
-                    @if (this.User.IsInRole("Administrator"))
-                    {
+                    <th>
+                        Doctor
+                    </th>
+                }
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                @if (item.DateTime < DateTime.UtcNow)
+                {
+                    <tr>
                         <td>
-                            <a class="btn btn-primary" asp-area="" asp-controller="Departments"
-                               asp-action="DoctorDetails" asp-route-id="@item.DoctorId">Doctor</a>
+                            @Html.DisplayFor(modelItem => item.PatientName)
                         </td>
-                    }
-                    <td>
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                    </td>
-                </tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DateTime)
+                        </td>
+                        @if (this.User.IsInRole("Administrator"))
+                    {
+                            <td>
+                                <a class="btn btn-primary" asp-area="" asp-controller="Departments"
+                                   asp-action="DoctorDetails" asp-route-id="@item.DoctorId">Doctor</a>
+                            </td>
+                        }
+                        <td>
+                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
             }
-        }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
